[project]
name = "luna-test"
version = "0.1.0"
description = "Тестовое задание для ММК Луна"
authors = [
    {name = "Илья Ватютов",email = "vatut007@ya.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.136.0,<0.137.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "sqlmodel (>=0.0.38,<0.0.39)",
    "alembic (>=1.18.4,<2.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "faststream (>=0.6.7,<0.7.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
